# Kairos

./: .gitignore  LICENSE  Makefile  README.md  rustfmt.toml
core/: Cargo.toml  build.rs
core/.cargo/: config.toml
core/src/: book.rs  compare.rs  config.rs  daemon.rs  decode.rs  encode.rs  failover.rs  lat_hist.rs  lib.rs  main.rs  metrics.rs  model.rs  poll.rs  shutdown.rs  streams.rs  subreg.rs  watchdog.rs
core/src/export/: convert.rs  hft.rs  mod.rs  npy.rs  parquet.rs
core/src/ipc/: aeron.rs  mod.rs
core/src/record/: mod.rs  recorder.rs
core/src/replay/: marker.rs  mod.rs  pacer.rs  runner.rs  source.rs
core/src/sim/: cli.rs  guard.rs  mod.rs  paths.rs  proc.rs
core/src/tapegen/: mod.rs
core/src/uds/: frame.rs  mod.rs  path.rs  server.rs
core/tests/: SIM_E2E.md  adversarial_compare.rs  adversarial_future_variant.rs  adversarial_panics.rs  aeron_dir_env.rs  aeron_roundtrip.rs  compare_repro.rs  core_watchdog_e2e.rs  env_defaults_table.rs  failover_serve.rs  golden_tapegen.rs  golden_wire.rs  golden_wire_v2.rs  kqr_export_roundtrip.rs  lat_hist_tape_proof.rs  record_roundtrip.rs  replay_roundtrip.rs  repro_guard_bypass.rs  repro_refusal_holes.rs  runbook_census.rs  shutdown_prestart.rs  sim_e2e.rs  sim_orphan_startup.rs  sim_roundtrip.rs  tapegen_sim_e2e.rs  uds_server.rs
core/tests/fixtures/scenarios/: trend_day_2330_drill.toml
core/tests/fixtures/tapes/: README.md  limit_lock_2330.kqr  quotes_only_2330.kqr  trend_day_2330.kqr
exec/scenario/: CMakeLists.txt  hub.example.toml  scenario.example.toml  signald.example.toml
exec/scenario/src/: concords_order_backend.cpp  concords_order_backend.h  dashboard_metrics.h  engine.cpp  engine.h  engine_logic.h  event.h  http_poster.cpp  http_poster.h  live_backend.h  live_backend_stub.cpp  notify_config.h  ntfy_dispatcher.h  order_backend.h  pricing.h  quote_book.h  quote_codec.cpp  quote_tap_main.cpp  scenario.cpp  scenario.h  scenario_trader_main.cpp  socket_path.h  tw_fees.h  tw_market.h  uds_frame.h
exec/scenario/src/blacklist/: blacklist.cpp  blacklist.h
exec/scenario/src/engine/: dashboard_reporter.cpp  dashboard_reporter.h  engine.cpp  engine.h  engine_exit_codes.h  failure_halt.cpp  failure_halt.h  roundtrip_fsm.cpp  roundtrip_fsm.h  roundtrip_journal.cpp  roundtrip_journal.h  roundtrip_legs.cpp  roundtrip_legs.h  roundtrip_recovery.cpp  roundtrip_recovery.h  roundtrip_runner.cpp  roundtrip_runner.h  scenario.cpp  scenario.h  sell_cap_ledger.cpp  sell_cap_ledger.h
exec/scenario/src/market/: engine_logic.h  enum_names.h  pricing.h  quote_book.h  time_util.h  tw_fees.h  tw_market.h
exec/scenario/src/notify/: dashboard_metrics.cpp  dashboard_metrics.h  event.h  event_sink.h  http_poster.cpp  json_util.h  notify_config.h  ntfy_dispatcher.cpp  transport.h
exec/scenario/src/order/: concords_order_backend.cpp  concords_order_backend.h  hub_order_backend.cpp  hub_order_backend.h  hub_status.cpp  hub_status.h  live_backend.h  live_backend_stub.cpp  order_backend.h  order_codec.cpp  order_codec.h  order_hub.cpp  order_hub.h  order_hub_server.cpp  order_hub_server.h  order_journal.cpp  order_journal.h  risk_gate.cpp  risk_gate.h
exec/scenario/src/quote/: quote_codec.cpp  quote_codec.h  quote_source.h  socket_path.h  uds_frame.h  uds_quote_client.cpp  uds_quote_client.h
exec/scenario/src/scenario/: scenario_ctl_path.h  scenario_ctl_proto.cpp  scenario_ctl_proto.h  scenario_ctl_server.cpp  scenario_ctl_server.h  scenario_process.cpp  scenario_process.h  scenario_state.cpp  scenario_state.h
exec/scenario/src/signal/: predicate.h  predicate_depth_evap.cpp  predicate_depth_evap.h  predicate_manual.cpp  predicate_manual.h  signal_client.cpp  signal_client.h  signal_daemon.cpp  signal_daemon.h  signal_proto.cpp  signal_proto.h
exec/scenario/src/sim/: auction.cpp  auction.h  fault_config.h  fault_injector.cpp  fault_injector.h  fill_engine.cpp  fill_engine.h  fill_model.cpp  fill_model.h  (+5 more)
exec/scenario/tests/: test_auction.cpp  test_b8_ordering.cpp  test_blacklist.cpp  test_check.h  test_ctl_corpus.cpp  test_dashboard_metrics.cpp  test_dashboard_reporter.cpp  test_engine.cpp  test_engine_forwarded.cpp  test_engine_logic.cpp  test_engine_result.cpp  test_event.cpp  test_failure_halt.cpp  test_fill_engine.cpp  test_fill_model.cpp  test_hub_order_backend.cpp  test_hub_risk_gate.cpp  test_hub_shutdown_snapshot.cpp  test_hub_status.cpp  test_hub_unroutable_e2e.cpp  test_journal_corpus.cpp  test_market_fees.cpp  test_ntfy_dispatcher.cpp  test_order_backend.cpp  test_order_codec.cpp  test_order_flow_escape.cpp  test_order_hub.cpp  test_order_hub_flow_ordering.cpp  test_order_hub_forwarded.cpp  test_order_hub_forwarder.cpp  test_order_hub_server.cpp  test_order_journal.cpp  test_order_wire.cpp  test_predicate_depth_evap.cpp  test_pricing.cpp  test_prob_queue.cpp  test_queue_sim_paper.cpp  test_quote_codec.cpp  test_roundtrip_fault_drills.cpp  test_roundtrip_fsm.cpp  (+28 more)
sidecar/: CMakeLists.txt
sidecar/concords/: CMakeLists.txt  sidecar.toml.example
sidecar/concords/src/: control_sub.cpp  control_sub.h  feed.cpp  feed.h  main.cpp  publisher.cpp  publisher.h  quote_encode.cpp  quote_encode.h
sidecar/concords/tests/: test_decode.cpp  test_encode.cpp  test_feed_window.cpp  test_golden.cpp  test_golden_v2.cpp  test_seq_epoch.cpp  test_trade.cpp
sidecar/include/: publisher.h  quote_encode.h
sidecar/src/: main.cpp  publisher.cpp  quote_encode.cpp
sidecar/tests/: test_encode.cpp
tui/: Cargo.toml
tui/src/: app.rs  format.rs  input.rs  lib.rs  main.rs  terminal.rs
tui/src/panels/: book.rs  confirm_banner.rs  data.rs  feed.rs  fills.rs  journal.rs  listview.rs  mod.rs  recorder.rs  risk.rs  scenarios.rs  systemd.rs  test_util.rs
tui/src/sources/: age.rs  archive.rs  blacklist.rs  confirm.rs  feed.rs  halt.rs  hub_status.rs  journald.rs  json.rs  mod.rs  order_journal.rs  recorder.rs  runtime_path.rs  scenario_ctl.rs  service.rs  supervisor.rs  systemd.rs  timers.rs
tui/tests/: adversarial_confirm_probe.rs  ctl_corpus.rs  lib_smoke.rs  sim_quote_smoke.rs  supervisor_e2e.rs  supervisor_robustness.rs
(+14 files in other folders)
