[package]
name = "kairos-core"
version = "0.1.0"
edition = "2024"

[dependencies]
capnp = "0.20"
rusteron-client = "0.1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"] }

[build-dependencies]
capnpc = "0.20"

[dev-dependencies]
rusteron-media-driver = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
