[package]
name = "kairos-core"
version = "0.1.0"
edition = "2024"
autobins = false

[[bin]]
name = "kairos-core"
path = "src/main.rs"

[[bin]]
name = "kairos-driver"
path = "src/bin/driver.rs"

[[bin]]
name = "kairos-uds-client"
path = "src/bin/uds_client.rs"

[dependencies]
capnp = "0.20"
rusteron-client = { version = "0.1", features = ["static"] }
rusteron-media-driver = { version = "0.1", features = ["static"] }
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "signal"] }

[build-dependencies]
capnpc = "0.20"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
